scroll to anchor

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -4,7 +4,7 @@
 
   <div class="nav">
 
-    <div> Pricing </div>
+    <div (click)="onClick('AnchorId')"> Pricing </div>
 
     <div (click)="openUpload()"> Upload </div>
 
