--- a/src/app/subscription/form/form.component.html
+++ b/src/app/subscription/form/form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="subscribeForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="subscribeForm" (ngSubmit)="onSubmit()" id="AnchorId">
 
   <label>
     <span> Email address </span>
